resolved all conflicts AGAIN

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Guddae!!!!</h1>
     <h2>Rebase testers</h2>
     <span>Locally added code!</span>
+    <span>Locally added code AGAIN!!</span>
     <p>I want to cause a conflict!</p>
 </body>
 
